2006-01-23 Aurel
* check category_list is a list in ERP5Type_asSecurityGroupId

2006-01-23 Alex
* Added "Add portal folders" permission for Author in Base_setDefaultSecurity

2006-01-21 JP
* Added Base_jumpToRelationObject to ease the implementation of jump menus
* Added support for user based role assignment (ERP5Type_getSecurityCategoryFromArrow)

2006-01-20 JP & Jerome
* Added document template initial support to Base_doAction and erp5_html_style

2006-01-20 Kevin
* Replace Translation Service by Localizer in: erp5_core/Base_TranslateString, erp5_core/ERP5Site_updateTranslationTable, erp5_csv_style/Listbox_exportCsv, erp5_html_style/form_html, erp5_html_style/view_master.xml, erp5_pdf_style/form_view, erp5_pdf_style/listbox_pdf_macro, erp5_pdf_style/report_pdf and erp5_pdf_style/report_view.
* ERP5Site_getModuleItemList cleaned.

2006-01-19 alex
* included result of "guess properties" script
* added constraints to BT_viewDetail

2006-01-18 aurel
* modify TemplateTool_viewInstallRepositoryBusinessTemplateListDialog and add TemplateTool_getModifiedObjectList, TemplateTool_installBusinessTemplateListAction, TemplateTool_viewMultiInstallationDialog to manage multi installation of business templates

2006-01-14 yo
* Add new skins TemplateTool_viewInstallRepositoryBusinessTemplateListDialog, TemplateTool_viewUpgradeRepositoryBusinessTemplateListDialog and TemplateTool_installRepositoryBusinessTemplateList.
* Add new actions install_from_repository and upgrade_from_repository into Template Tool.
* Adjust the priorities of the actions of Template Tool.

2006-01-13 aurel
* modify UI of Business Template

2006-01-13 yo
* Add classes for tr into erp5.css

2006-01-07 jerome
* enable auto-login feature
* fix preference UI to set priority

2006-01-06 Romain
* modify Resource_zGetInventory, Resource_zGetInventoryList
* add Resource_zGetMovementHistoryList
* remove Resource_viewInventory

2006-01-02 aurel
* rename field in BusinessTemplate_viewDetail

2005-12-30 aurel