@@ -20,7 +20,7 @@
         </item>
         <item>
             <key> <string>id</string> </key>
-            <value> <string>my_template_local_roles_list</string> </value>
+            <value> <string>my_template_portal_type_roles_list</string> </value>
         </item>
         <item>
             <key> <string>message_values</string> </key>
@@ -279,7 +279,7 @@
                 </item>
                 <item>
                     <key> <string>title</string> </key>
-                    <value> <string>Local Roles</string> </value>
+                    <value> <string>Portal Type Roles</string> </value>
                 </item>
                 <item>
                     <key> <string>unicode</string> </key>
